syntax = "proto3";
package platune.player.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Platune.Player.V1";
option go_package = "github.com/aschey/platune/client/player_v1";
option java_multiple_files = true;
option java_outer_classname = "PlayerProto";
option java_package = "platune.player.v1";

service Player {
  rpc SetQueue(QueueRequest) returns (google.protobuf.Empty);
  rpc AddToQueue(QueueRequest) returns (google.protobuf.Empty);
  rpc Pause(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Resume(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Seek(SeekRequest) returns (google.protobuf.Empty);
  rpc SetVolume(SetVolumeRequest) returns (google.protobuf.Empty);
  rpc Next(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Previous(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc GetCurrentStatus(google.protobuf.Empty) returns (StatusResponse);
  rpc SubscribeEvents(google.protobuf.Empty) returns (stream EventResponse);
  rpc ListOutputDevices(google.protobuf.Empty) returns (DevicesResponse);
  rpc SetOutputDevice(SetOutputDeviceRequest) returns (google.protobuf.Empty);
}

enum Event {
  START_QUEUE = 0;
  QUEUE_UPDATED = 1;
  STOP = 2;
  PAUSE = 3;
  RESUME = 4;
  TRACK_CHANGED = 5;
  SET_VOLUME = 6;
  SEEK = 7;
  QUEUE_ENDED = 8;
  POSITION = 9;
}

enum PlayerStatus {
  PLAYING = 0;
  STOPPED = 1;
  PAUSED = 2;
}

enum SeekMode {
  FORWARD = 0;
  BACKWARD = 1;
  ABSOLUTE = 2;
}

message Track {
  string url = 1;
  Metadata metadata = 2;
}

message QueueRequest {
  repeated Track queue = 1;
}

message SeekRequest {
  google.protobuf.Duration time = 1;
  SeekMode mode = 2;
}

message SetVolumeRequest {
  float volume = 1;
}

message EventResponse {
  Event event = 1;
  oneof event_payload {
    State state = 2;
    SeekResponse seek_data = 3;
    PositionResponse progress = 4;
  }
}

message Metadata {
  optional string artist = 1;
  optional string album_artist = 2;
  optional string album = 3;
  optional string song = 4;
  optional int64 track_number = 5;
  optional google.protobuf.Duration duration = 6;
}

message State {
  repeated string queue = 1;
  uint32 queue_position = 2;
  PlayerStatus status = 3;
  float volume = 4;
  optional Metadata metadata = 5;
}

message PositionResponse {
  google.protobuf.Duration position = 1;
  google.protobuf.Duration retrieval_time = 2;
}

message SeekResponse {
  State state = 1;
  uint64 seek_millis = 2;
}

message StatusResponse {
  State state = 1;
  optional PositionResponse progress = 2;
}

message DevicesResponse {
  repeated string devices = 1;
}

message SetOutputDeviceRequest {
  optional string device = 1;
}
