syntax = "proto3";

option java_multiple_files = true;
option java_package = "player.rpc";
option java_outer_classname = "PlayerProto";
option go_package = "github.com/aschey/platune";

import "google/protobuf/empty.proto";
package player_rpc;

service Player {
  rpc SetQueue(QueueRequest) returns (google.protobuf.Empty) {}
  rpc AddToQueue(AddToQueueRequest) returns (google.protobuf.Empty) {}
  rpc Pause(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Resume(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Seek(SeekRequest) returns (google.protobuf.Empty) {}
  rpc SetVolume(SetVolumeRequest) returns (google.protobuf.Empty) {}
  rpc Next(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Previous(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc SubscribeEvents(google.protobuf.Empty) returns (stream EventResponse) {}
}

message QueueRequest { repeated string queue = 1; }
message AddToQueueRequest { repeated string songs = 1; }
message SeekRequest { uint64 millis = 1; }
message SetVolumeRequest { float volume = 1; }
message EventResponse {
  repeated string queue = 1;
  string event = 2;
  optional uint64 millis = 3;
  optional float volume = 4;
}